# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("./scripts/build/ninja/vars.gni")

devtools_module_entrypoint_sources = [
  "RuntimeInstantiator.js",
  "accessibility/accessibility-legacy.js",
  "animation/animation-legacy.js",
  "animation/animation.js",
  "bindings/bindings-legacy.js",
  "browser_debugger/browser_debugger-legacy.js",
  "browser_debugger/browser_debugger.js",
  "browser_sdk/browser_sdk-legacy.js",
  "changes/changes-legacy.js",
  "changes/changes.js",
  "cm_modes/cm_modes.js",
  "color_picker/color_picker-legacy.js",
  "common/common-legacy.js",
  "components/components-legacy.js",
  "console/console-legacy.js",
  "console/console.js",
  "console_counters/console_counters-legacy.js",
  "cookie_table/cookie_table-legacy.js",
  "cookie_table/cookie_table.js",
  "coverage/coverage-legacy.js",
  "coverage/coverage.js",
  "css_overview/css_overview-legacy.js",
  "data_grid/data_grid-legacy.js",
  "developer_resources/developer_resources-legacy.js",
  "developer_resources/developer_resources.js",
  "diff/diff-legacy.js",
  "elements/elements-legacy.js",
  "emulation/emulation-legacy.js",
  "emulation/emulation.js",
  "event_listeners/event_listeners-legacy.js",
  "extensions/extensions-legacy.js",
  "formatter/formatter-legacy.js",
  "har_importer/har_importer-legacy.js",
  "heap_snapshot_model/heap_snapshot_model-legacy.js",
  "heap_snapshot_worker/heap_snapshot_worker-legacy.js",
  "heap_snapshot_worker/heap_snapshot_worker.js",
  "help/help-legacy.js",
  "host/host-legacy.js",
  "inline_editor/inline_editor-legacy.js",
  "input/input-legacy.js",
  "input/input.js",
  "inspector_main/inspector_main-legacy.js",
  "inspector_main/inspector_main.js",
  "issues/issues-legacy.js",
  "javascript_metadata/javascript_metadata-legacy.js",
  "js_main/js_main-legacy.js",
  "layer_viewer/layer_viewer-legacy.js",
  "layer_viewer/layer_viewer.js",
  "layers/layers-legacy.js",
  "layers/layers.js",
  "lighthouse/lighthouse-legacy.js",
  "lighthouse/lighthouse.js",
  "main/main-legacy.js",
  "main/main.js",
  "media/media-legacy.js",
  "media/media.js",
  "mobile_throttling/mobile_throttling-legacy.js",
  "network/network-legacy.js",
  "network/network.js",
  "node_main/node_main-legacy.js",
  "node_main/node_main.js",
  "object_ui/object_ui-legacy.js",
  "perf_ui/perf_ui-legacy.js",
  "performance_monitor/performance_monitor-legacy.js",
  "persistence/persistence-legacy.js",
  "profiler/profiler-legacy.js",
  "profiler/profiler.js",
  "protocol_client/protocol_client-legacy.js",
  "protocol_monitor/protocol_monitor-legacy.js",
  "protocol_monitor/protocol_monitor.js",
  "quick_open/quick_open-legacy.js",
  "resources/resources-legacy.js",
  "resources/resources.js",
  "root.js",
  "root/root-legacy.js",
  "screencast/screencast-legacy.js",
  "sdk/sdk-legacy.js",
  "search/search-legacy.js",
  "security/security-legacy.js",
  "security/security.js",
  "services/services-legacy.js",
  "settings/settings-legacy.js",
  "snippets/snippets-legacy.js",
  "snippets/snippets.js",
  "source_frame/source_frame-legacy.js",
  "sources/sources-legacy.js",
  "sources/sources.js",
  "test_runner/test_runner.js",
  "text_editor/text_editor-legacy.js",
  "text_utils/text_utils-legacy.js",
  "timeline/timeline-legacy.js",
  "timeline/timeline.js",
  "timeline_model/timeline_model-legacy.js",
  "ui/ui-legacy.js",
  "wasmparser_worker/wasmparser_worker.js",
  "web_audio/web_audio-legacy.js",
  "web_audio/web_audio.js",
  "webauthn/webauthn-legacy.js",
  "webauthn/webauthn.js",
  "worker_main/worker_main-legacy.js",
  "worker_main/worker_main.js",
  "workspace/workspace-legacy.js",
  "workspace_diff/workspace_diff-legacy.js",
]

front_end_devtools_module_entrypoint_sources = []
generated_devtools_module_entrypoint_sources = []

foreach(module, devtools_module_entrypoint_sources) {
  front_end_devtools_module_entrypoint_sources += [ "front_end/$module" ]
  generated_devtools_module_entrypoint_sources +=
      [ "$resources_out_dir/$module" ]
}

generated_typescript_entrypoint_sources = [
  "$resources_out_dir/accessibility/accessibility.js",
  "$resources_out_dir/bindings/bindings.js",
  "$resources_out_dir/browser_sdk/browser_sdk.js",
  "$resources_out_dir/client_variations/client_variations.js",
  "$resources_out_dir/cm/cm.js",
  "$resources_out_dir/cm_headless/cm_headless.js",
  "$resources_out_dir/color_picker/color_picker.js",
  "$resources_out_dir/common/common.js",
  "$resources_out_dir/components/components.js",
  "$resources_out_dir/console_counters/console_counters.js",
  "$resources_out_dir/css_overview/css_overview.js",
  "$resources_out_dir/data_grid/data_grid.js",
  "$resources_out_dir/devices/devices.js",
  "$resources_out_dir/diff/diff.js",
  "$resources_out_dir/dom_extension/dom_extension.js",
  "$resources_out_dir/elements/elements.js",
  "$resources_out_dir/event_listeners/event_listeners.js",
  "$resources_out_dir/extensions/extensions.js",
  "$resources_out_dir/formatter/formatter.js",
  "$resources_out_dir/formatter_worker/formatter_worker.js",
  "$resources_out_dir/har_importer/har_importer.js",
  "$resources_out_dir/heap_snapshot_model/heap_snapshot_model.js",
  "$resources_out_dir/help/help.js",
  "$resources_out_dir/host/host.js",
  "$resources_out_dir/inline_editor/inline_editor.js",
  "$resources_out_dir/issues/issues.js",
  "$resources_out_dir/javascript_metadata/javascript_metadata.js",
  "$resources_out_dir/js_main/js_main.js",
  "$resources_out_dir/marked/marked.js",
  "$resources_out_dir/mobile_throttling/mobile_throttling.js",
  "$resources_out_dir/object_ui/object_ui.js",
  "$resources_out_dir/perf_ui/perf_ui.js",
  "$resources_out_dir/performance_monitor/performance_monitor.js",
  "$resources_out_dir/persistence/persistence.js",
  "$resources_out_dir/platform/platform.js",
  "$resources_out_dir/protocol_client/protocol_client.js",
  "$resources_out_dir/quick_open/quick_open.js",
  "$resources_out_dir/root/root.js",
  "$resources_out_dir/screencast/screencast.js",
  "$resources_out_dir/sdk/sdk.js",
  "$resources_out_dir/search/search.js",
  "$resources_out_dir/services/services.js",
  "$resources_out_dir/settings/settings.js",
  "$resources_out_dir/source_frame/source_frame.js",
  "$resources_out_dir/text_editor/text_editor.js",
  "$resources_out_dir/text_utils/text_utils.js",
  "$resources_out_dir/third_party/acorn/acorn.js",
  "$resources_out_dir/third_party/lit-html/lit-html.js",
  "$resources_out_dir/timeline_model/timeline_model.js",
  "$resources_out_dir/toolbox_bootstrap/toolbox_bootstrap.js",
  "$resources_out_dir/ui/ui.js",
  "$resources_out_dir/ui/utils/utils.js",
  "$resources_out_dir/worker_service/worker_service.js",
  "$resources_out_dir/workspace/workspace.js",
  "$resources_out_dir/workspace_diff/workspace_diff.js",
]
