# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("./scripts/build/ninja/vars.gni")

devtools_module_entrypoint_sources = [
  "Images/Images.js",
  "browser_sdk/browser_sdk-meta.js",
  "browser_sdk/browser_sdk.js",
  "cm/cm.js",
  "color_picker/color_picker-legacy.js",
  "color_picker/color_picker.js",
  "component_helpers/component_helpers.js",
  "components/components-legacy.js",
  "components/components.js",
  "cookie_table/cookie_table-legacy.js",
  "cookie_table/cookie_table.js",
  "core/common/common-legacy.js",
  "core/common/common.js",
  "core/dom_extension/dom_extension.js",
  "core/host/host-legacy.js",
  "core/host/host.js",
  "core/i18n/i18n.js",
  "core/platform/platform.js",
  "core/protocol_client/protocol_client-legacy.js",
  "core/protocol_client/protocol_client.js",
  "core/root/root-legacy.js",
  "core/root/root.js",
  "core/sdk/sdk-legacy.js",
  "core/sdk/sdk-meta.js",
  "core/sdk/sdk.js",
  "data_grid/data_grid-legacy.js",
  "data_grid/data_grid.js",
  "diff/diff-legacy.js",
  "diff/diff.js",
  "formatter/formatter-legacy.js",
  "formatter/formatter.js",
  "formatter_worker/FormatterActions.js",
  "formatter_worker/formatter_worker-entrypoint.js",
  "formatter_worker/formatter_worker.js",
  "har_importer/har_importer-legacy.js",
  "har_importer/har_importer.js",
  "heap_snapshot_worker/heap_snapshot_worker-entrypoint.js",
  "heap_snapshot_worker/heap_snapshot_worker-legacy.js",
  "heap_snapshot_worker/heap_snapshot_worker.js",
  "inline_editor/inline_editor-legacy.js",
  "inline_editor/inline_editor.js",
  "inspector_main/inspector_main-meta.js",
  "inspector_main/inspector_main.js",
  "issues/issues-meta.js",
  "issues/issues.js",
  "js_main/js_main.js",
  "js_profiler/js_profiler-meta.js",
  "js_profiler/js_profiler.js",
  "legacy_test_runner/legacy_test_runner.js",
  "legacy_test_runner/test_runner/test_runner.js",
  "lighthouse_worker/LighthouseService.js",
  "lighthouse_worker/lighthouse_worker.js",
  "linear_memory_inspector/linear_memory_inspector-legacy.js",
  "linear_memory_inspector/linear_memory_inspector-meta.js",
  "linear_memory_inspector/linear_memory_inspector.js",
  "main/main-legacy.js",
  "main/main-meta.js",
  "main/main.js",
  "models/bindings/bindings-legacy.js",
  "models/bindings/bindings.js",
  "models/extensions/extensions-legacy.js",
  "models/extensions/extensions.js",
  "models/heap_snapshot_model/heap_snapshot_model-legacy.js",
  "models/heap_snapshot_model/heap_snapshot_model.js",
  "models/javascript_metadata/javascript_metadata-legacy.js",
  "models/javascript_metadata/javascript_metadata.js",
  "models/persistence/persistence-legacy.js",
  "models/persistence/persistence-meta.js",
  "models/persistence/persistence.js",
  "models/text_utils/text_utils-legacy.js",
  "models/text_utils/text_utils.js",
  "models/timeline_model/timeline_model-legacy.js",
  "models/timeline_model/timeline_model.js",
  "node_debugger/node_debugger-meta.js",
  "node_debugger/node_debugger.js",
  "node_main/node_main-meta.js",
  "node_main/node_main.js",
  "object_ui/object_ui-legacy.js",
  "object_ui/object_ui-meta.js",
  "object_ui/object_ui.js",
  "panels/accessibility/accessibility-legacy.js",
  "panels/accessibility/accessibility-meta.js",
  "panels/accessibility/accessibility.js",
  "panels/animation/animation-legacy.js",
  "panels/animation/animation-meta.js",
  "panels/animation/animation.js",
  "panels/application/application-legacy.js",
  "panels/application/application-meta.js",
  "panels/application/application.js",
  "panels/browser_debugger/browser_debugger-legacy.js",
  "panels/browser_debugger/browser_debugger-meta.js",
  "panels/browser_debugger/browser_debugger.js",
  "panels/changes/changes-legacy.js",
  "panels/changes/changes-meta.js",
  "panels/changes/changes.js",
  "panels/console/console-legacy.js",
  "panels/console/console-meta.js",
  "panels/console/console.js",
  "panels/console_counters/console_counters-legacy.js",
  "panels/console_counters/console_counters-meta.js",
  "panels/console_counters/console_counters.js",
  "panels/coverage/coverage-legacy.js",
  "panels/coverage/coverage-meta.js",
  "panels/coverage/coverage.js",
  "panels/css_overview/css_overview-meta.js",
  "panels/css_overview/css_overview.js",
  "panels/developer_resources/developer_resources-legacy.js",
  "panels/developer_resources/developer_resources-meta.js",
  "panels/developer_resources/developer_resources.js",
  "panels/elements/elements-legacy.js",
  "panels/elements/elements-meta.js",
  "panels/elements/elements.js",
  "panels/emulation/emulation-legacy.js",
  "panels/emulation/emulation-meta.js",
  "panels/emulation/emulation.js",
  "panels/event_listeners/event_listeners-legacy.js",
  "panels/event_listeners/event_listeners.js",
  "panels/help/help-legacy.js",
  "panels/help/help-meta.js",
  "panels/help/help.js",
  "panels/input/input-meta.js",
  "panels/input/input.js",
  "panels/layer_viewer/layer_viewer-legacy.js",
  "panels/layer_viewer/layer_viewer-meta.js",
  "panels/layer_viewer/layer_viewer.js",
  "panels/layers/layers-legacy.js",
  "panels/layers/layers-meta.js",
  "panels/layers/layers.js",
  "panels/lighthouse/lighthouse-legacy.js",
  "panels/lighthouse/lighthouse-meta.js",
  "panels/lighthouse/lighthouse.js",
  "panels/media/media-meta.js",
  "panels/media/media.js",
  "panels/mobile_throttling/mobile_throttling-legacy.js",
  "panels/mobile_throttling/mobile_throttling-meta.js",
  "panels/mobile_throttling/mobile_throttling.js",
  "panels/network/network-legacy.js",
  "panels/network/network-meta.js",
  "panels/network/network.js",
  "panels/performance_monitor/performance_monitor-meta.js",
  "panels/performance_monitor/performance_monitor.js",
  "panels/profiler/profiler-legacy.js",
  "panels/profiler/profiler-meta.js",
  "panels/profiler/profiler.js",
  "panels/protocol_monitor/protocol_monitor-meta.js",
  "panels/protocol_monitor/protocol_monitor.js",
  "perf_ui/perf_ui-legacy.js",
  "perf_ui/perf_ui-meta.js",
  "perf_ui/perf_ui.js",
  "quick_open/quick_open-legacy.js",
  "quick_open/quick_open-meta.js",
  "quick_open/quick_open.js",
  "recorder/recorder.js",
  "render_coordinator/render_coordinator.js",
  "screencast/screencast-meta.js",
  "screencast/screencast.js",
  "search/search-legacy.js",
  "search/search.js",
  "security/security-legacy.js",
  "security/security-meta.js",
  "security/security.js",
  "settings/settings-legacy.js",
  "settings/settings-meta.js",
  "settings/settings.js",
  "snippets/snippets-legacy.js",
  "snippets/snippets.js",
  "source_frame/source_frame-legacy.js",
  "source_frame/source_frame-meta.js",
  "source_frame/source_frame.js",
  "sources/sources-legacy.js",
  "sources/sources-meta.js",
  "sources/sources.js",
  "startup/startup.js",
  "text_editor/text_editor-legacy.js",
  "text_editor/text_editor.js",
  "theme_support/theme_support.js",
  "third_party/acorn/acorn.js",
  "third_party/chromium/client-variations/client-variations.js",
  "third_party/i18n/i18n-bundle.js",
  "third_party/lighthouse/lighthouse-dt-bundle.js",
  "third_party/lit-html/lit-html.js",
  "third_party/marked/marked.js",
  "third_party/puppeteer/puppeteer.js",
  "timeline/timeline-legacy.js",
  "timeline/timeline-meta.js",
  "timeline/timeline.js",
  "toolbox.js",
  "ui/components/components.js",
  "ui/legacy/legacy-legacy.js",
  "ui/legacy/legacy.js",
  "ui/legacy/utils/utils.js",
  "wasmparser_worker/wasmparser_worker-entrypoint.js",
  "wasmparser_worker/wasmparser_worker.js",
  "web_audio/graph_visualizer/graph_visualizer.js",
  "web_audio/web_audio-legacy.js",
  "web_audio/web_audio-meta.js",
  "web_audio/web_audio.js",
  "webauthn/webauthn-meta.js",
  "webauthn/webauthn.js",
  "worker_main/worker_main.js",
  "workspace/workspace-legacy.js",
  "workspace/workspace.js",
  "workspace_diff/workspace_diff-legacy.js",
  "workspace_diff/workspace_diff.js",
]

generated_module_entrypoint_sources = []

foreach(entrypoint, devtools_module_entrypoint_sources) {
  generated_module_entrypoint_sources +=
      [ "$root_gen_dir/" + devtools_location + "front_end/$entrypoint" ]
}
